# raycaster

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: 6x8-terminal-mspaint.xcf  barrel.xcf  barrel_explode.xcf  ceil.xcf  floor.xcf  floor2.xcf
assets/levels/: barrel_test.lua  barrel_test.tmx.lua  barrel_test.txt  blank_level.lua  blank_level.txt  test_level.lua  test_level.tmx.lua  test_level.txt  tiled_test.tmx.lua
assets/lua/: main.lua
dev_assets/images/: 6x8-terminal-mspaint.xcf  bat.xcf  ceil.xcf  column.xcf  floor.xcf  stone.xcf  wall.xcf
dev_assets/levels/: barrel_test.tmx  test_level.tmx  tiled_test.tmx  tmx2lua.py
docs/: tiled_guidance.md
ext/lua/: CMakeLists.txt
src/: asset_store.cpp  asset_store.hpp  camera.cpp  camera.hpp  color.hpp  main.cpp  my_app.cpp  my_app.hpp  mymath.hpp  screenshot.cpp  screenshot.hpp  sdl_app.cpp  sdl_app.hpp
src/line_drawer/: line_drawer_app.cpp  line_drawer_app.hpp  main.cpp
src/line_intersection/: main.cpp
src/lua_raii/: lua_raii.hpp
src/luatest/: test.cpp
src/mycolor/: mycolor.hpp
src/mymath/: cartesian.hpp  linear_algebra.hpp  mymath.hpp
src/raycaster/: asset_store.cpp  asset_store.hpp  camera.cpp  camera.hpp  collision.cpp  collision.hpp  color.hpp  console.cpp  console.hpp  input_buffer.cpp  input_buffer.hpp  intersection.cpp  intersection.hpp  level.cpp  level.hpp  main.cpp  my_app.cpp  my_app.hpp  pipeline.cpp  pipeline.hpp  pixel_format_debug.hpp  raycaster_app.cpp  raycaster_app.hpp  screenshot.cpp  sdl_mymath.cpp  sdl_mymath.hpp  surface_manipulation.cpp  surface_manipulation.hpp  texture_cache.hpp
src/sdl_application/: asset_store.cpp  asset_store.hpp  input_buffer.cpp  input_buffer.hpp  screenshot.cpp  screenshot.hpp  sdl_application.cpp  sdl_application.hpp  sdl_mymath.cpp  sdl_mymath.hpp  surface_manipulation.cpp  surface_manipulation.hpp
src/sdl_raii/: sdl_app.cpp  sdl_app.hpp  sdl_assert.hpp  sdl_init.cpp  sdl_init.hpp  sdl_raii.hpp  sdl_wrappers.hpp
